# flox

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Aggregation Comparison.ipynb  Async Comparison.ipynb  Demo.ipynb  Fit-Prototype.ipynb  Flock-Demo.ipynb  Getting-Started.ipynb  LICENSE  Plots.ipynb  README.md  Rural AI Workshop Demo.ipynb  Temp Notebook.ipynb  aggr_comparison.py  async_demo.py  async_fashion_mnist_demo.py  async_test_demo.py  demo.py  env.yml  example.pytxt  fashion_mnist_demo.py  fed_data_distributions.py  fed_demo.py  fed_demo_cifar.py  fed_demo_mnist.py  fed_split_figure.py  fit_prototype_run.py  ignite_demo.py  main.py  mkdocs.yml  models.py  modules.py  my_hier_results.feather  my_results.feather  my_results_using_requires_grad.feather  old_main.py  plot_style.py  plots.ipynb  (+11 more)
.github/workflows/: ci.yaml  tests.yaml
beta/: _trainer.py  fedavg.py  module.py  run.py  tasks.py
demos/: Trainer Playground.ipynb  fed_demo_cifar.py  fed_demo_mnist.py  fed_demo_sklearn.py  scikit_demo.py  tmp-cifar.feather  tmp.feather  topo.yaml  topo_playground.py  trainer_demo.py
depr/: __init__.py  core.py  fit.py  state.py  typing.py
depr/aggregator/: __init__.py
depr/callbacks/: __init__.py  aggregator_callbacks.py  leader_callbacks.py  worker_callbacks.py
depr/executor/: globus.py
depr/fit/: __init__.py  _async.py  _sync.py  core.py  tasks.py
depr/flock/: __init__.py  flock.py  nodes.py
depr/flox/: __init__.py  fit.py  version.py
depr/flox_examples/: aggr_comparison.py  async_demo.py  async_test_demo.py  balanced_flock_demo.py  fashion_mnist_demo.py  plot_style.py  simple_hierarchical.py  test.py
depr/trainer/: trainer.py
depr/worker/: __init__.py  base.py  core.py  module.py
docs/: about.md  faq.md  federated_learning.md  generate_api.py  index.md  user_guide.md
docs-mkdocs/: index.md
docs-mkdocs/getting_started/: index.md  trainer.md
docs-mkdocs/publications/: index.md
docs/about/: index.md  proxystore.md
docs/concepts/: strategies.md
docs/getting_started/: flock.md  index.md  learning.md  quickstart.md
docs/graphics/: FLoX Logo.afdesign  flight-logo.afdesign  ignite_logo.afphoto
docs/home/: federated_learning.md  globus_compute.md
docs/publications/: index.md
docs/source/: conf.py  flox.backends.rst  flox.data.rst  flox.nn.logger.rst  flox.nn.rst  flox.rst  flox.strategies.commons.rst  flox.utils.random.rst  flox.utils.rst  getting_started.rst  index.rst  modules.rst
docs/stylesheets/: extra.css  mkdocstrings.css  youtube.css
examples/: async_fashion_mnist_demo.py  balanced_flock_demo.py  fashion_mnist_demo.py  mnist.py  quickstart.py  simple.py  simple_hierarchical.py  topo_experiment.py
examples/flock_files/: 2-tier.json  3-tier.json  3-tier.yaml
examples/flocks/: gce-complex-sample.yaml
examples/mnist/: mnist.py  workers.yaml
examples/notebooks/: Async-Demo.ipynb  Quickstart.ipynb  Testing Plots.ipynb
flight/: __init__.py  commons.py  events.py  fit.py  fitter.py  logging.py  module.py  state.py  strategy.py  types.py  workflow.py
flight/asynchronous/: __init__.py
flight/contrib/: __init__.py  fedavg.py  fedprox.py
flight/engine/: engine.py
flight/federation/: __init__.py  app.py  commons.py  fed.py  fed_abs.py  fed_async.py  fed_sync.py  future_callbacks.py  records.py  types.py
flight/jobs/: aggr.py  protocols.py  types.py  worker.py
flight/launch/: __init__.py  __main__.py  main.py
flight/learning/: __init__.py  base.py  datasets.py  lightning.py  metrics.py  module.py  parameters.py  params.py  process_fns.py  scikit.py  torch.py  types.py  utils.py
flight/runtime/: __init__.py
flight/strategies/: __init__.py  aggr.py  base.py  coord.py  strategy.py  trainer.py  utils.py  worker.py
flight/system/: __init__.py  io.py  node.py  topology.py  types.py  utils.py
flight/utils/: fed_data.py
flox/: README.md  __init__.py  _aggr.py  _fit_sync.py  _worker.py  core.py  fit.py  main.py  plots.ipynb  results.py  run.py  sample_flock.yaml  state.py  stopper.py  tasks.py  typing.py  utils.py
flox/aggregator/: __init__.py  base.py  fedavg.py  standard.py  state.py  task.py
flox/data/: __init__.py  base.py  core.py  fed_data.py  subsets.py  utils.py
flox/depr/: _aggr.py  _worker.py
flox/executor/: base.py  globus.py  globus_compute.py  local.py  sync.py
flox/federation/: fed_sync.py  testing.py
flox/fit/: __init__.py  _async.py  _sync.py  core.py
flox/flock/: Playing Around.ipynb  __init__.py  factory.py  flock.py  node.py  states.py  status.py
flox/jobs/: __init__.py  aggregation.py  info.py  local_training.py  protocols.py  train_depr.py
flox/learn/: __init__.py  _async.py  _sync.py  fit.py  logger.py  model.py  prototype.py  trainer.py  types.py  typing.py  update.py
flox/logger/: __init__.py  base.py  csv_logger.py  null_logger.py  tensorboard_logger.py
flox/nn/: README.md  __init__.py  model.py  model_trainer.py  trainer.py  typing.py
flox/process/: __init__.py  debug_utils.py  future_callbacks.py  process.py  process_async.py  process_sync.py  testing.py
flox/random/: flock.py
flox/reporting/: __init__.py  job.py
flox/run/: __init__.py  asynchronous.py  fit.py  fit_async.py  (+6 more)
flox_examples/: aggr_comparison.py  async_demo.py  async_fashion_mnist_demo.py  async_test_demo.py  simple_hierarchical.py  test.py  topo_experiment.py  yadu_async_test.py
notebooks/: Chi-edge-prototype.ipynb  Flock-Demo-v2.ipynb  Synch-Demo.ipynb  Testing Plots.ipynb  Topo Comparison.ipynb
quickstart/: Quickstart-Playground.ipynb  README.md  fashion_mnist_demo.py  fed_data_distributions.py  flox_module.py  trainer_demo.feather
runs/: events.out.tfevents.1719414088.DESKTOP-GFHSPSQ.10255.0  events.out.tfevents.1719414088.DESKTOP-GFHSPSQ.10255.3
testing/: fixtures.py
tests/: asynch_mnist.py  sim_mnist.py  test_commons.py  test_events.py  test_fitter.py  test_node.py  test_state.py  test_strategy.py  test_workflow.py
v1/: demo.py  demo_v2.py  ignite_demo.py
(+611 files in other folders)
