[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flight"
version = "0.1.0"

description = "Flight is a flexible, easy-to-deploy framework for serverless federated learning, with support for hierarchical and asynchronous federated learning."
readme = "README.md"

license = { file = "LICENSE" }
keywords = ["federated learning", "deep learning", "machine learning", "serverless computing"]

authors = [
    { name = "Nathaniel Hudson", email = "hudsonn@uchicago.edu" },
    { name = "Valerie Hayot-Sasson", email = "valeriehayot@gmail.com" }
]

maintainers = [
    { name = "Nathaniel Hudson", email = "hudsonn@uchicago.edu" },
    { name = "Valerie Hayot-Sasson", email = "valeriehayot@gmail.com" },
]

requires-python = ">=3.10"
dependencies = [
    "globus-compute-sdk",
    "torch",
    "pandas",
    #    "pygraphviz",
    "tqdm",
    "scipy",
]

[project.optional-dependencies]
dev = ["black", "coverage", "jupyterlab", "matplotlib", "numpy", "pytest", "seaborn", "tensorboard", "torchvision", "matplotlib-stubs", "pandas-stubs", "networkx-stubs"]
monitoring = ["tensorboard"]
proxystore = ["proxystore"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
all = ["flox[dev,monitoring,proxystore]"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[tool.setuptools.packages.find]
include = ["flox*"]
namespaces = false
