[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flight"
version = "0.1.0"

description = "Flight is a flexible, easy-to-deploy framework for serverless federated learning, with support for hierarchical and asynchronous federated learning."
readme = "README.md"

license = { file = "LICENSE" }
keywords = ["federated learning", "deep learning", "machine learning", "serverless computing"]

authors = [
    { name = "Nathaniel Hudson", email = "hudsonn@uchicago.edu" },
    { name = "Globus Labs"},
]

maintainers = [
    { name = "Nathaniel Hudson", email = "hudsonn@uchicago.edu" },
    { name = "Valerie Hayot-Sasson", email = "valeriehayot@gmail.com" },
]

requires-python = ">=3.11"
dependencies = [
    "parsl",
    "globus-compute-sdk",
    "lightning",
    "matplotlib",
    "numpy",
    "pandas",
    "parsl",
    "proxystore>=0.7.1",
    "scipy",
    "scikit-learn",
    "tqdm",
    "torch",
    "pyyaml",
]

[project.optional-dependencies]
all = ["flight[dev,docs,monitoring,proxystore]"]
endpoints = [
    # TODO: Add dependencies for endpoints to run aggregation and worker aggr.
]
dev = [
    "black",
    "coverage",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "pytest",
    "seaborn",
    "tensorboard",
    "torchvision",
    "matplotlib-stubs",
    "pandas-stubs",
    "networkx-stubs"
]
monitoring = ["tensorboard"]
proxystore = ["proxystore"]
docs = [
    "black",
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-get-deps",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-mermaid2-plugin",
    "mkdocs-section-index",
    "mkdocstrings",
    "mkdocstrings-crystal",
    "mkdocstrings-python",
]

[tool.coverage.run]
omit = ["*/_remote_module_non_scriptable.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    # a more strict default pragma
    "\\# pragma: no cover\\b",
    # allow defensive code
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
    "^\\s*raise$",
    # typing-related code
    "^\\s*if (False|TYPE_CHECKING):",
    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
]

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
    "proxystore.mypy_plugin",
]

[tool.setuptools.packages.find]
include = ["flight*"]
namespaces = false
